--- a/.github/workflows/work.yaml
+++ b/.github/workflows/work.yaml
@@ -6,7 +6,7 @@ on:
             - master
     workflow_dispatch: # 手动触发
     schedule:
-        - cron: '0 20 10 1-31 * ? *'
+        - cron: '10 9 * * *'
 jobs:
     build:
         runs-on: ubuntu-latest
